--- a/index.html
+++ b/index.html
@@ -1,73 +1,65 @@
 <!DOCTYPE html>
-<html lang="en" data-bs-theme="dark">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="stylesheet" href="./style.css">
-    <title>Christos Tzouvaras</title>
+    <title>Christos Tzouvaras CV</title>
 </head>
 <body>
-
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">Christos Tzouvaras</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="http://127.0.0.1:3000/Resume Exercise/index.html">CV</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="http://127.0.0.1:3000/Resume Exercise/contact.html">Contact Me</a>
-              </li>
-            </ul>
-            
-          </div>
-        </div>
-      </nav>
-
-    <div id="title" class="gradient-background">
-        <div class="container col-xxl-8 px-4 pt-5">
-            <div class="row align-items-center g-5 pt-5">
-                <!-- Image Column -->
-                <div class="col-10 col-sm-8 col-lg-6">
-                    <img src="./me.jpg" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" height="200" loading="lazy">
-                </div>
-                <!-- Text Column -->
-                <div class="col-lg-6">
-                    <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">I'm Christos Tzouvaras and I'm a developer. Welcome to my personal website!</h1>
-                </div>
-            </div>     
-        </div>     
-    </div>
-    <!--about me -->
-    <div class="container px-4 py-5" id="featured-3">
-    <h2 class="pb-2 border-bottom text-center">About Me</h2>
-    <div class="row g-4 py-5 row-cols-1 row-cols-lg-3 justify-content-center">
-      <div class="feature col">
-        <p class="text-center">Hello there! My name is Christos Tzouvaras, I'm 26 years old and I'm based in Athens for a while.
-            I'm a Computer Science graduate from the University Of Crete.
-            I'm currently serving at the General Ministry Of National Defence as a Lance Corporal. There I'm a system
-            administrator, and i provide IT and network support!
-        </p>
-      </div>
-    </div>
-   </div>
-
-<!--footer-->
-   <div class="container">
-    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-      <div class="col-md-4 d-flex align-items-center">
-        <span class="mb-3 mb-md-0 text-body-secondary">© 2024 Christos Tzouvaras</span>
-      </div>
+    <!--<img src="./me.jpg" width="150" height="=150">-->
+    <h1> Christos Tzouvaras</h1>
+    <a href="./contact.html"> Contact Me</a>
+    <hr />
+    <p>My name is Christos Tzouvaras, I'm 26 years old , I've studied Computer Science at the Universiy of Crete.
+        At the moment I'm based in Athens Greece where I serve in the Greek Army at HELLENIC NATIONAL DEFENCE GENERAL
+        STAFF as a system administrator and IT-network supporter.</p>
+    <hr />
+    <h2>Education </h2>
+    <ul>
+        <li>Averofeio High School of Metsovo (2009-2015).</li>
+        <li>University of Crete - Computer Science Department(Feb. 2016-June 2023).</li>
+    </ul>
+    <hr />
+    <h2>Work Experience</h2>
+    <ul>
+        <li>Ιnternship at the 1st General High School of Heraklion Crete(Oct. 2021-Jan. 2022).</li>
+        <li>Logo and Catalog Creation for an Italian Restaurant(Athens 2023).</li>
+        <li>IT Support for a local Pharmacy(Ioannina).</li>
+        <li>System Administration, IT and Network Support at HELLENIC NATIONAL DEFENCE GENERAL
+            STAFF(Nov. 2023-Nov. 2024)</li>
+    </ul>
+    <hr />
+    <h2>Skills</h2>
+    <ul>
+        <li>C</li>
+        <li>C++</li>
+        <li>JAVA</li>
+        <li>R</li>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>Javascript</li>
+        <li>Blender</li> 
+        <li>Matlab</li>
+        <li>Bootstrap</li>
+        <li>jQuery</li>
+        <li>Node.js</li>
+    </ul>
+    <hr />
+    <h2>Certificates</h2>
+    <ul>
+        <li>B2 English Language(ECCE AND TOIEC).</li>
+        <li>Certificate Of Teaching Proficiency-University of Crete.</li>
+        <li>Certificate of Special Training of students-University of Patras.</li>
+        <li>The Complete MySQL Bootcamp:From SQL beginner to expert 2023-Udemy Course.</li>
+        <li>The Complete 2024 Web Development Bootcamp-Udemy Course.</li>       
+    </ul>
+    <hr />
+    <h2>Accomplishments</h2>
+    <ul>
+        <li>I served as a Corporal in the General Staff Of National Defense(Jul.2024-Nov.2024).</li>
+    </ul>
+    <hr />
+    <footer>
+        <p>Copyright Christos Tzouvaras September 2024.</p>
     </footer>
-  </div>
 </body>
 </html>
