--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="http://127.0.0.1:3000/Resume Exercise/index.html">CV</a>
+                <a class="nav-link" href="http://127.0.0.1:3000/Resume Exercise/index1.html">CV</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="http://127.0.0.1:3000/Resume Exercise/contact.html">Contact Me</a>
