--- a/index.html
+++ b/index.html
@@ -22,13 +22,12 @@
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="http://127.0.0.1:3000/Resume Exercise/index1.html">CV</a>
+                <a class="nav-link" href="./index1.html">CV</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="http://127.0.0.1:3000/Resume Exercise/contact.html">Contact Me</a>
+                <a class="nav-link" href="./contact.html">Contact Me</a>
               </li>
             </ul>
-            
           </div>
         </div>
       </nav>
